refracted token creation codes and added auth handler and auth usecase with auth repository; access token and refresh token creation and login with middleware validation
