# cmd/api/docs/swagger.json
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/req.ReqUserSignUp"
+                            "$ref": "#/definitions/req.ReqEditUser"
                         }
                     }
                 ],
@@ -411,7 +411,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/req.ReqCoupon"
+                            "$ref": "#/definitions/req.ReqEditCoupon"
                         }
                     }
                 ],
@@ -522,7 +522,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Offer"
+                            "$ref": "#/definitions/req.ReqOffer"
                         }
                     }
                 ],
@@ -996,7 +996,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/req.ReqProduct"
+                            "$ref": "#/definitions/req.ReqProductUpdate"
                         }
                     }
                 ],
@@ -1555,6 +1555,48 @@
                 }
             }
         },
+        "/coupons": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "User Coupon"
+                ],
+                "summary": "api for user to see all coupons",
+                "operationId": "GetAllCouponsForUser",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Count Of Order",
+                        "name": "count",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully go all the coupons",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "faild to get all coupons",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "security": [
@@ -1575,7 +1617,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/req.LoginStruct"
+                            "$ref": "#/definitions/req.Login"
                         }
                     }
                 ],
@@ -1935,7 +1977,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/req.ReqUserSignUp"
+                            "$ref": "#/definitions/req.ReqUserDetails"
                         }
                     }
                 ],
@@ -2052,37 +2094,6 @@
                 }
             }
         },
-        "domain.Offer": {
-            "type": "object",
-            "required": [
-                "description",
-                "discount_rate",
-                "end_date",
-                "offer_name",
-                "start_date"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 6
-                },
-                "discount_rate": {
-                    "type": "integer",
-                    "maximum": 100,
-                    "minimum": 1
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "offer_name": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                }
-            }
-        },
         "req.BlockStruct": {
             "type": "object",
             "required": [
@@ -2091,6 +2102,32 @@
             "properties": {
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "req.Login": {
+            "type": "object",
+            "required": [
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 5
+                },
+                "phone": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                },
+                "user_name": {
+                    "type": "string",
+                    "maxLength": 15,
+                    "minLength": 3
                 }
             }
         },
@@ -2325,6 +2362,126 @@
                 }
             }
         },
+        "req.ReqEditCoupon": {
+            "type": "object",
+            "required": [
+                "coupon_name",
+                "description",
+                "discount_rate",
+                "expire_date",
+                "image",
+                "minimum_cart_price"
+            ],
+            "properties": {
+                "block_status": {
+                    "type": "boolean"
+                },
+                "coupon_id": {
+                    "type": "integer"
+                },
+                "coupon_name": {
+                    "type": "string",
+                    "maxLength": 25,
+                    "minLength": 3
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 150,
+                    "minLength": 6
+                },
+                "discount_rate": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1
+                },
+                "expire_date": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "minimum_cart_price": {
+                    "type": "integer",
+                    "minimum": 1
+                }
+            }
+        },
+        "req.ReqEditUser": {
+            "type": "object",
+            "required": [
+                "age",
+                "email",
+                "first_name",
+                "last_name",
+                "phone",
+                "user_name"
+            ],
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "confirm_password": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 1
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                },
+                "user_name": {
+                    "type": "string",
+                    "maxLength": 15,
+                    "minLength": 3
+                }
+            }
+        },
+        "req.ReqOffer": {
+            "type": "object",
+            "required": [
+                "description",
+                "discount_rate",
+                "end_date",
+                "offer_name",
+                "start_date"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 6
+                },
+                "discount_rate": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "offer_name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                }
+            }
+        },
         "req.ReqOfferCategory": {
             "type": "object",
             "required": [
@@ -2388,9 +2545,6 @@
                     "maxLength": 100,
                     "minLength": 10
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "image": {
                     "type": "string"
                 },
@@ -2436,6 +2590,41 @@
                 }
             }
         },
+        "req.ReqProductUpdate": {
+            "type": "object",
+            "required": [
+                "category_id",
+                "description",
+                "id",
+                "image",
+                "price",
+                "product_name"
+            ],
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 10
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "product_name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
+                }
+            }
+        },
         "req.ReqReturn": {
             "type": "object",
             "required": [
@@ -2445,7 +2634,7 @@
             "properties": {
                 "return_reason": {
                     "type": "string",
-                    "maxLength": 50,
+                    "maxLength": 150,
                     "minLength": 6
                 },
                 "shop_order_id": {
@@ -2485,7 +2674,7 @@
                 }
             }
         },
-        "req.ReqUserSignUp": {
+        "req.ReqUserDetails": {
             "type": "object",
             "required": [
                 "age",
@@ -2572,7 +2761,7 @@
                 "message": {
                     "type": "string"
                 },
-                "status": {
+                "status_code": {
                     "type": "integer"
                 }
             }
